Fixed the layout render which was unstable and overlapping other elements on resize or if the size of the window was smaller than the screen when the images composition was created.

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -6,6 +6,13 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 3rem;
+  z-index: -1;
+}
+
+@media all and (max-width: 700px) {
+  .layout {
+    width: 75% !important;
+  }
 }
 
 .layout input {
@@ -15,8 +22,6 @@
 
 .image {
   position: relative;
-  min-width: 100px;
-  min-height: 100px;
   display: flex;
   align-items: center;
   justify-content: space-between;
